--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 python-frontmatter>=0.5.0
 python-dateutil>=2.8.1
+panflute>=2.1.0
 pytz==2019.1
 git+git://github.com/lukasschwab/jsonfeed.git#egg=jsonfeed
